PDI-1090:Add the ability to get filename from previous step for Get files names step
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@7481 5fb7f6ec-07c1-534a-b4ca-9155e429e800